# house

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  pyrightconfig.json  run.sh
config/: nginx.conf
docker/: Dockerfile
docs/: notes.txt
scripts/: build.sh
src/crates/backend/: Cargo.toml
src/crates/backend/src/: main.rs
src/crates/backend/static/: index.html
src/crates/core/: Cargo.toml
src/crates/core/src/: calculations.rs  lib.rs  materials.rs  models.rs  svg_renderer.rs  units.rs
src/crates/core/src/plans/: luxury_farmhouse.rs  mod.rs  serialization.rs
src/crates/frontend/: Cargo.toml
src/crates/frontend/src/: lib.rs
src/html/: errors.html  index.html
src/html/assets/css/: main.css
src/html/assets/js/: main.js
src/html/assets/js/modules/: marked.js
src/html/components/: calculator.html  dashboard.html  scheduler.html
src/html/projects/bunker/: blueprint.html  guide.md
src/html/projects/cabin/: blueprint.html  guide.md
src/html/projects/farmhouse/: blueprint.html  guide.md  luxury_farmhouse.json  luxury_floorplan.html  luxury_floorplan_blueprint.html  luxury_from_json.html
src/python/: Makefile  README.md  config.yaml  floor_plan_config.yaml  floor_plan_generator.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh
src/python/src/: __init__.py  cache.py  drawing.py  generators.py  main.py  models.py  utilities.py
src/python/src/config/: floor_plan_config.yaml
src/python/src/defaults/: __init__.py
src/python/src/drawing/: __init__.py
src/python/src/generators/: __init__.py
src/python/src/models/: __init__.py
src/python/src/tests/: __init__.py  conftest.py  test_defaults.py  test_drawing.py  test_generators.py  test_models.py  test_utilities.py
src/python/src/utilities/: __init__.py
src/python/tests/: conftest.py  test_cache.py  test_drawing.py  test_generators.py  test_models.py  test_utilities.py
