[workspace]
resolver = "2"
members = [
    "src/crates/backend",
    "src/crates/frontend",
    "src/crates/core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nuniesmith"]
license = "MIT"
repository = "https://github.com/nuniesmith/house"

[workspace.dependencies]
# Core shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Backend dependencies
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }

# Frontend (WASM) dependencies
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "DragEvent",
    "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo = "0.11"

# Testing
pretty_assertions = "1.4"
