[package]
name = "floorplan-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
floorplan-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true

# Web framework
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Logging/tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Database
sqlx.workspace = true

# Additional utilities
dotenvy = "0.15"

[dev-dependencies]
pretty_assertions.workspace = true
